--- a/app/views/create.html
+++ b/app/views/create.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<h1>Luo drinkki</h1>
+
+  <form>
+    <div class="form-group">
+      <label>Drinkin nimi</label>
+      <input type="text" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label>Kuvaus</label>
+      <input type="text" class="form-control">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Luo</button>
+  </form>
+
+    <a href="/tsoha"><small>Valikkoon</small></a>
+
+{% endblock %}
