--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,11 +2,14 @@
 
 {% block content %}
   <div class="page-header">
-    <h1>Tervetuloa Tsoha Bootstrappiin!</h1>
+    <h1>Tervetuloa Esson kapakkaan!</h1>
   </div>
-
+  
   <p>
-    <a href="http://tsoha.github.io" class="btn btn-primary btn-lg">Tutustu materiaaliin <span class="glyphicon glyphicon-chevron-right"></span></a>
+    <a href="/tsoha/drinks">Drinkit</a>
+    <a href="/tsoha/users">Käyttäjät</a>
+    <a href="/tsoha/create">Luo drinkki</a>
+    <a href="/tsoha/ingredients">Ainekset</a>
+
   </p>
 {% endblock %}
-
