--- a/app/views/ingredient.html
+++ b/app/views/ingredient.html
@@ -2,11 +2,11 @@
 
 {% block content %}
     
-    <h1>Ainesosan nimi</h1>
+    <h1>{{ingredient.name}}</h1>
 
-    <h4>Alkoholiprosentti: 80%</h4>
+    <h4>{{ingredient.alcohol_percentage}}</h4>
 
-    <h4>Kuvaus</h4>
+    <h4>{{ingredient.description}}</h4>
 
     <a href="/tsoha/ingredients"><small>Aineksiin</small></a>
 
