--- a/app/views/user.html
+++ b/app/views/user.html
@@ -1,17 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Käyttäjän nimi</h1>
+<h1>{{user.username}}</h1>
 
 <h3>Käyttäjän drinkit</h3>
-    <p>
-        <a href="/tsoha/drinks/drink">Drinkki 1</a>
-        <small>Arvosana: 5</small>
-    </p>     
-    <p>
-        <a href="/tsoha/drinks/drink">Drinkki 2</a>
-        <small>Arvosana: 3.5</small>
-    </p> 
+
+    {% for drink in drinks %}
+        <p>
+            <a href="/tsoha/drinks/{{drink.id}}">{{drink.name}}</a>
+            <small>Arvosana (todo)</small>
+        </p>
+    {% endfor %}
     
     <a href="/tsoha/users"><small>Käyttäjät</small></a>
 
