--- a/app/views/ingredient.html
+++ b/app/views/ingredient.html
@@ -4,9 +4,11 @@
     
     <h1>{{ingredient.name}}</h1>
 
-    <h4>{{ingredient.alcohol_percentage}}</h4>
+    <h4>Alkoholiprosentti: {{ingredient.alcohol_percentage}}%</h4>
 
-    <h4>{{ingredient.description}}</h4>
+    <h4>Kuvaus</h4>
+    
+    <h5>{{ingredient.description}}</h5>
 
     <a href="/tsoha/ingredients"><small>Aineksiin</small></a>
 
