--- a/app/views/drink.html
+++ b/app/views/drink.html
@@ -4,7 +4,7 @@
         
     <h1>{{drink.name}}</h1>
 
-    <h3>Arvosana: 3 (todo)</h3>
+    <h3>Arvosana: {{drink.rating}}</h3>
 
     <h3>Ainekset</h3>
 
