--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,17 +3,19 @@
 {% block content %}
 <h1>Kirjaudu sisään</h1>
 
-  <form>
+  <form method="post">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input type="text" class="form-control">
+      <input type="text" name="username" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input type="password" class="form-control">
+      <input type="password" name="password" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
   </form>
+
+    <a href="/tsoha"><small>Valikkoon</small></a>
 {% endblock %}
