--- a/app/views/drinks.html
+++ b/app/views/drinks.html
@@ -6,7 +6,7 @@
     {% for drink in drinks %}
         <p>
             <a href="/tsoha/drinks/{{drink.id}}">{{drink.name}}</a>
-            <small>Arvosana (todo)</small>
+            <small>Arvosana: {{drink.rating}}</small>
         </p>
     {% endfor %}
     
