--- a/app/views/reviews.html
+++ b/app/views/reviews.html
@@ -5,30 +5,15 @@
     <h1>{{drink.name}}</h1>
     
     {% for review in reviews %}
-        
         <h4>Arvostelija: {{review.reviewer}}</h4>
         
-        <small>{{review.description}}</small>
-        <br>
         <small>Arvosana: {{review.rating}}</small>
+        
+        <a href="/tsoha/drinks/{{drink.id}}/reviews/{{review.id}}"><small>Arvosteluun</small></a>
     {% endfor %}
     
-    <h3>Kirjoita oma arvostelu</h3>    
+    <a href="/tsoha/drinks/{{drink.id}}/reviews/review"><h3>Kirjoita arvostelu</h3></a>
 
-    <form method = "post">
-        <div class="form-group">
-          <label>Kuvaus</label>
-          <input type="text" name = "description" class="form-control">
-        </div>
-    
-        <div class="form-group">
-          <label>Arvosana</label>
-          <input type="text" name="rating" class="form-control">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Luo</button>
-    </form>
-    
     <a href="/tsoha/drinks/{{drink.id}}"><small>Takaisin drinkkiin</small></a>
 
 {% endblock %}
