--- a/app/views/ingredient.html
+++ b/app/views/ingredient.html
@@ -12,4 +12,5 @@
 
     <a href="/tsoha/ingredients"><small>Aineksiin</small></a>
 
+    <a href="/tsoha"><small>Valikkoon</small></a>
 {% endblock %}
