--- a/app/views/create.html
+++ b/app/views/create.html
@@ -2,41 +2,80 @@
 
 {% block content %}
 <h1>Luo drinkki</h1>
-  
+
+    <h1>{{message}}</h1>
+    
+    {% for error in errors %}
+        <h3>{{error}}</h3>
+    {% endfor %}
+
   <h3>Lisää ainesosat</h3>
   
   <form method="post">
-    <select name="ingredient">
+    <select name="ingredient1">
       {% for ingredient in ingredients %}       
-          <option value="{{ingredient}}">{{ingredient.name}}</option>
+          <option value="{{ingredient.name}}">{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
       {% endfor %}
     </select>
      
     <div class="form-group">
       <label>Määrä (ml)</label>
-      <input type="text" name="volume1" class="form-control">
+      <input type="text" name="volume1">
     </div>
       
-      <select name="ingredient2">
+    <select name="ingredient2">
       {% for ingredient in ingredients %}       
-          <option value="{{ingredient}}" >{{ingredient.name}}</option>
+          <option value="{{ingredient.name}}" >{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
       {% endfor %}
     </select>
      
     <div class="form-group">
       <label>Määrä (ml)</label>
-      <input type="text" name="volume2" class="form-control">
+      <input type="text" name="volume2">
     </div>
       
      <select name="ingredient3">
       {% for ingredient in ingredients %}       
-          <option value="{{ingredient}}">{{ingredient.name}}</option>
+          <option value="{{ingredient.name}}">{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
+      {% endfor %}
+    </select>
+      
+    <div class="form-group">
+      <label>Määrä (ml)</label>
+      <input type="text" name="volume3">
+    </div>
+      
+     <select name="ingredient4">
+      {% for ingredient in ingredients %}       
+          <option value="{{ingredient.name}}">{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
       {% endfor %}
     </select>
      
     <div class="form-group">
       <label>Määrä (ml)</label>
-      <input type="text" name="volume3" class="form-control">
+      <input type="text" name="volume4">
+    </div>
+      
+    <select name="ingredient5">
+      {% for ingredient in ingredients %}       
+          <option value="{{ingredient.name}}" >{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
+      {% endfor %}
+    </select>
+     
+    <div class="form-group">
+      <label>Määrä (ml)</label>
+      <input type="text" name="volume5">
+    </div>
+      
+     <select name="ingredient6">
+      {% for ingredient in ingredients %}       
+          <option value="{{ingredient.name}}">{{ingredient.name}}: {{ingredient.alcohol_percentage}}%</option>
+      {% endfor %}
+    </select>
+     
+    <div class="form-group">
+      <label>Määrä (ml)</label>
+      <input type="text" name="volume6">
     </div>
     
     <div class="form-group">
