--- a/app/views/review.html
+++ b/app/views/review.html
@@ -2,9 +2,14 @@
 
 {% block content %}
 
-    <h1>Drinkin {{drink.name}} arvostelu</h1>   
-    <h3>{{errors}}</h3>
+    <h1>Drinkin {{drink.name}} arvostelu</h1>  
     
+    <h1>{{message}}</h1>
+    
+    {% for error in errors %}
+        <h3>{{error}}</h3>
+    {% endfor %}
+        
     <form method = "post">
         <div class="form-group">
           <label>Kuvaus</label>
@@ -27,4 +32,5 @@
     
     <a href="/tsoha/drinks/{{drink.id}}/reviews"><small>Takaisin arvosteluihin</small></a>
 
+    <a href="/tsoha"><small>Valikkoon</small></a>
 {% endblock %}
