--- a/app/views/singlereview.html
+++ b/app/views/singlereview.html
@@ -10,9 +10,10 @@
     
     <small>Arvosana: {{review.rating}}</small>
     
-    <a href="/tsoha/drinks/{{drink.id}}/reviews/{{review.id}}/remove"><small>Poista arvostelu</small></a>
+    <a href="/tsoha/drinks/{{drink.id}}/reviews/{{review.id}}/remove"><small>{{path_text}}</small></a>
     
     <a href="/tsoha/drinks/{{drink.id}}/reviews"><small>Takaisin arvosteluihin</small></a>
 
+    <a href="/tsoha"><small>Valikkoon</small></a>
 {% endblock %}
 
