--- a/app/views/user.html
+++ b/app/views/user.html
@@ -8,10 +8,11 @@
     {% for drink in drinks %}
         <p>
             <a href="/tsoha/drinks/{{drink.id}}">{{drink.name}}</a>
-            <small>Arvosana (todo)</small>
+            <small>Arvosana: {{drink.rating}}</small>
         </p>
     {% endfor %}
     
     <a href="/tsoha/users"><small>Käyttäjät</small></a>
 
+    <a href="/tsoha"><small>Valikkoon</small></a>
 {% endblock %}
