--- a/app/views/reviews.html
+++ b/app/views/reviews.html
@@ -14,7 +14,7 @@
         <a href="/tsoha/drinks/{{drink.id}}/reviews/{{review.id}}"><small>Arvosteluun</small></a>
     {% endfor %}
     
-    <a href="/tsoha/drinks/{{drink.id}}/reviews/review"><h3>Kirjoita arvostelu</h3></a>
+    <a href={{review_path}}><h3>{{review_text}}</h3></a>
 
     <a href="/tsoha/drinks/{{drink.id}}"><small>Takaisin drinkkiin</small></a>
 
