--- a/app/views/register.html
+++ b/app/views/register.html
@@ -3,15 +3,21 @@
 {% block content %}
 <h1>Rekisteröidy palveluun</h1>
 
+<h1>{{message}}</h1>
+    
+{% for error in errors %}
+    <h3>{{error}}</h3>
+{% endfor %}
+    
   <form method = "post">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input type="username" name="username" class="form-control">
+      <input type="username" name="username" placeholder="4-30 merkkiä" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input type="password" name="password" class="form-control">
+      <input type="password" name="password" placeholder="8-30 merkkiä" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-primary">Rekisteröidy</button>
