--- a/app/views/ingredients.html
+++ b/app/views/ingredients.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <h1>Ainesosat</h1>
+
+    <small>Lajittele</small>
+    <a href="/tsoha/ingredients"><small>nimen</small></a>
+    <a href="/tsoha/ingredients/alcohol"><small>alkoholiprosentin</small></a>
+    <small>perusteella</small>
     
     {% for ingredient in ingredients %}
         <p>
