--- a/app/views/user.html
+++ b/app/views/user.html
@@ -12,6 +12,9 @@
         </p>
     {% endfor %}
     
+    <a href="{{delete_path}}"><small>{{delete_text}}</small></a>
+
+    
     <a href="/tsoha/users"><small>Käyttäjät</small></a>
 
     <a href="/tsoha"><small>Valikkoon</small></a>
